# mssqlrust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
src/dataset/: data_cell.rs  data_column.rs  data_row.rs  data_set.rs  data_set_test.rs  data_table.rs  data_value.rs  mod.rs
src/infrastructure/mssql/: config.rs  mod.rs  sql_connection.rs
src/repositories/: command.rs  dataset_repository.rs  dataset_repository_test.rs  mod.rs  parameter.rs  query_executor.rs
src/services/: dataset_service.rs  dataset_service_test.rs  mod.rs  service.rs
tests/: integration_test.rs
