[package]
name = "mssqlrust"
version = "0.1.0"
edition = "2021"
authors = ["Luis Carlos Carrillo T (Luigimonsoft)"]
description = "Lightweight Rust library for Microsoft SQL Server using dataset and datatable"
license = "MIT"
readme = "README.md"
keywords = ["sqlserver", "mssql", "database","dataset","datatable"]
categories = ["database", "asynchronous"]
repository = "https://github.com/Luigimonsoft/mssqlrust"

[dependencies]
anyhow = "1"
thiserror = "2.0.16"
futures = "0.3"
chrono = { version = "0.4.41", features = ["clock"] }
base64 = "0.22"
tiberius = { version = "0.12.3", default-features = false, features = ["native-tls", "tds73", "chrono", "rust_decimal"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
async-trait = "0.1"
uuid = "1"
rust_decimal = "1"

[dev-dependencies]
